// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class-and-id > ast 1`] = `
[
  {
    "attributes": {
      "class": "class",
      "id": "id",
    },
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "abc",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "containerDirective",
  },
]
`;

exports[`class-and-id > html > output1 1`] = `
"<div class="class" id="id">

abc

</div>"
`;

exports[`class-and-id > html > output2 1`] = `
"<div class="class" id="id">

abc

</div>"
`;

exports[`class-and-id > html > parsed 1`] = `
[
  {
    "type": "html",
    "value": "<div class="class" id="id">",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "abc",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
]
`;

exports[`class-and-id > input 1`] = `
"::::::div{#id.class}

abc

::::::
"
`;

exports[`class-and-id > mdx > output1 1`] = `
"<div className="class" id="id">
  abc
</div>"
`;

exports[`class-and-id > mdx > output2 1`] = `
"<div className="class" id="id">
  abc
</div>"
`;

exports[`class-and-id > mdx > parsed 1`] = `
[
  {
    "attributes": [
      {
        "name": "className",
        "type": "mdxJsxAttribute",
        "value": "class",
      },
      {
        "name": "id",
        "type": "mdxJsxAttribute",
        "value": "id",
      },
    ],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "abc",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
]
`;

exports[`empty-frontmatter > ast 1`] = `
[
  {
    "type": "yaml",
    "value": "",
  },
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "containerDirective",
  },
]
`;

exports[`empty-frontmatter > html > output1 1`] = `
"---
---

<div>

A

</div>"
`;

exports[`empty-frontmatter > html > output2 1`] = `
"---
---

<div>

A

</div>"
`;

exports[`empty-frontmatter > html > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "A",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
]
`;

exports[`empty-frontmatter > input 1`] = `
"---
---

::::div

A

::::
"
`;

exports[`empty-frontmatter > mdx > output1 1`] = `
"---
---

<div>
  A
</div>"
`;

exports[`empty-frontmatter > mdx > output2 1`] = `
"---
---

<div>
  A
</div>"
`;

exports[`empty-frontmatter > mdx > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "",
  },
  {
    "attributes": [],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
]
`;

exports[`html > ast 1`] = `
[
  {
    "attributes": {},
    "children": [
      {
        "attributes": {},
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "abc",
              },
            ],
            "type": "paragraph",
          },
        ],
        "name": "summary",
        "type": "containerDirective",
      },
    ],
    "name": "details",
    "type": "containerDirective",
  },
]
`;

exports[`html > html > output1 1`] = `
"<details>

<summary>

abc

</summary>

</details>"
`;

exports[`html > html > output2 1`] = `
"<details>

<summary>

abc

</summary>

</details>"
`;

exports[`html > html > parsed 1`] = `
[
  {
    "type": "html",
    "value": "<details>",
  },
  {
    "type": "html",
    "value": "<summary>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "abc",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</summary>",
  },
  {
    "type": "html",
    "value": "</details>",
  },
]
`;

exports[`html > input 1`] = `
":::::::details

::::::summary
abc
::::::

:::::::
"
`;

exports[`html > mdx > output1 1`] = `
"<details>
  <summary>
    abc
  </summary>
</details>"
`;

exports[`html > mdx > output2 1`] = `
"<details>
  <summary>
    abc
  </summary>
</details>"
`;

exports[`html > mdx > parsed 1`] = `
[
  {
    "attributes": [],
    "children": [
      {
        "attributes": [],
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "abc",
              },
            ],
            "type": "paragraph",
          },
        ],
        "name": "summary",
        "type": "mdxJsxFlowElement",
      },
    ],
    "name": "details",
    "type": "mdxJsxFlowElement",
  },
]
`;

exports[`invalid-yaml > ast 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true
	foo: bar",
  },
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "containerDirective",
  },
]
`;

exports[`invalid-yaml > html > output1 1`] = `
"---
blockBreak: true
	foo: bar
---

<div>

A

</div>"
`;

exports[`invalid-yaml > html > output2 1`] = `
"---
blockBreak: true
	foo: bar
---

<div>

A

</div>"
`;

exports[`invalid-yaml > html > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true
	foo: bar",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "A",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
]
`;

exports[`invalid-yaml > input 1`] = `
"---
blockBreak: true
	foo: bar
---

::::div

A

::::
"
`;

exports[`invalid-yaml > mdx > output1 1`] = `
"---
blockBreak: true
	foo: bar
---

<div>
  A
</div>"
`;

exports[`invalid-yaml > mdx > output2 1`] = `
"---
blockBreak: true
	foo: bar
---

<div>
  A
</div>"
`;

exports[`invalid-yaml > mdx > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true
	foo: bar",
  },
  {
    "attributes": [],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
]
`;

exports[`nested-pagebreak-split > ast 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "attributes": {},
    "children": [
      {
        "attributes": {},
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "S",
              },
            ],
            "type": "paragraph",
          },
          {
            "type": "thematicBreak",
          },
          {
            "children": [
              {
                "type": "text",
                "value": "T",
              },
            ],
            "type": "paragraph",
          },
        ],
        "name": "p",
        "type": "containerDirective",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
      {
        "type": "thematicBreak",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "B",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "containerDirective",
  },
]
`;

exports[`nested-pagebreak-split > html > output1 1`] = `
"---
blockBreak: true
---

<div>

:::p
S

***

T
:::

A

</div>

<div>

B

</div>"
`;

exports[`nested-pagebreak-split > html > output2 1`] = `
"---
blockBreak: true
---

<div>

:::p
S

***

T
:::

A

</div>

<div>

B

</div>"
`;

exports[`nested-pagebreak-split > html > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "S",
          },
        ],
        "type": "paragraph",
      },
      {
        "type": "thematicBreak",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "T",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "p",
    "type": "containerDirective",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "A",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "B",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
]
`;

exports[`nested-pagebreak-split > input 1`] = `
"---
blockBreak: true
---

::::div

:::p

S

---

T

:::

A

---

B

::::
"
`;

exports[`nested-pagebreak-split > mdx > output1 1`] = `
"---
blockBreak: true
---

<div>
  :::p
  S

  ***

  T
  :::

  A
</div>

<div>
  B
</div>"
`;

exports[`nested-pagebreak-split > mdx > output2 1`] = `
"---
blockBreak: true
---

<div>
  :::p
  S

  ***

  T
  :::

  A
</div>

<div>
  B
</div>"
`;

exports[`nested-pagebreak-split > mdx > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "attributes": [],
    "children": [
      {
        "attributes": {},
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "S",
              },
            ],
            "type": "paragraph",
          },
          {
            "type": "thematicBreak",
          },
          {
            "children": [
              {
                "type": "text",
                "value": "T",
              },
            ],
            "type": "paragraph",
          },
        ],
        "name": "p",
        "type": "containerDirective",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
  {
    "attributes": [],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "B",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
]
`;

exports[`not-html > ast 1`] = `
[
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "abc",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "text",
    "type": "containerDirective",
  },
]
`;

exports[`not-html > html > output1 1`] = `
":::text
abc
:::"
`;

exports[`not-html > html > output2 1`] = `
":::text
abc
:::"
`;

exports[`not-html > html > parsed 1`] = `
[
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "abc",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "text",
    "type": "containerDirective",
  },
]
`;

exports[`not-html > input 1`] = `
"::::::text

abc

::::::
"
`;

exports[`not-html > mdx > output1 1`] = `
":::text
abc
:::"
`;

exports[`not-html > mdx > output2 1`] = `
":::text
abc
:::"
`;

exports[`not-html > mdx > parsed 1`] = `
[
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "abc",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "text",
    "type": "containerDirective",
  },
]
`;

exports[`pagebreak-false > ast 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: false",
  },
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
      {
        "type": "thematicBreak",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "B",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "containerDirective",
  },
]
`;

exports[`pagebreak-false > html > output1 1`] = `
"---
blockBreak: false
---

<div>

A

***

B

</div>"
`;

exports[`pagebreak-false > html > output2 1`] = `
"---
blockBreak: false
---

<div>

A

***

B

</div>"
`;

exports[`pagebreak-false > html > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: false",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "A",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "thematicBreak",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "B",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
]
`;

exports[`pagebreak-false > input 1`] = `
"---
blockBreak: false
---

::::div

A

---

B

::::
"
`;

exports[`pagebreak-false > mdx > output1 1`] = `
"---
blockBreak: false
---

<div>
  A

  ***

  B
</div>"
`;

exports[`pagebreak-false > mdx > output2 1`] = `
"---
blockBreak: false
---

<div>
  A

  ***

  B
</div>"
`;

exports[`pagebreak-false > mdx > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: false",
  },
  {
    "attributes": [],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
      {
        "type": "thematicBreak",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "B",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
]
`;

exports[`pagebreak-leading-break > ast 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "attributes": {},
    "children": [
      {
        "type": "thematicBreak",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "containerDirective",
  },
]
`;

exports[`pagebreak-leading-break > html > output1 1`] = `
"---
blockBreak: true
---

<div>

A

</div>"
`;

exports[`pagebreak-leading-break > html > output2 1`] = `
"---
blockBreak: true
---

<div>

A

</div>"
`;

exports[`pagebreak-leading-break > html > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "A",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
]
`;

exports[`pagebreak-leading-break > input 1`] = `
"---
blockBreak: true
---

::::div

---

A

::::
"
`;

exports[`pagebreak-leading-break > mdx > output1 1`] = `
"---
blockBreak: true
---

<div>
  A
</div>"
`;

exports[`pagebreak-leading-break > mdx > output2 1`] = `
"---
blockBreak: true
---

<div>
  A
</div>"
`;

exports[`pagebreak-leading-break > mdx > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "attributes": [],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
]
`;

exports[`pagebreak-no-break > ast 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "B",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "containerDirective",
  },
]
`;

exports[`pagebreak-no-break > html > output1 1`] = `
"---
blockBreak: true
---

<div>

A

B

</div>"
`;

exports[`pagebreak-no-break > html > output2 1`] = `
"---
blockBreak: true
---

<div>

A

B

</div>"
`;

exports[`pagebreak-no-break > html > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "A",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "B",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
]
`;

exports[`pagebreak-no-break > input 1`] = `
"---
blockBreak: true
---

::::div

A

B

::::
"
`;

exports[`pagebreak-no-break > mdx > output1 1`] = `
"---
blockBreak: true
---

<div>
  A

  B
</div>"
`;

exports[`pagebreak-no-break > mdx > output2 1`] = `
"---
blockBreak: true
---

<div>
  A

  B
</div>"
`;

exports[`pagebreak-no-break > mdx > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "attributes": [],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "B",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
]
`;

exports[`pagebreak-split > ast 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "attributes": {},
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
      {
        "type": "thematicBreak",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "B",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "containerDirective",
  },
]
`;

exports[`pagebreak-split > html > output1 1`] = `
"---
blockBreak: true
---

<div>

A

</div>

<div>

B

</div>"
`;

exports[`pagebreak-split > html > output2 1`] = `
"---
blockBreak: true
---

<div>

A

</div>

<div>

B

</div>"
`;

exports[`pagebreak-split > html > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "A",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
  {
    "type": "html",
    "value": "<div>",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "B",
      },
    ],
    "type": "paragraph",
  },
  {
    "type": "html",
    "value": "</div>",
  },
]
`;

exports[`pagebreak-split > input 1`] = `
"---
blockBreak: true
---

:::div

A

---

B

:::
"
`;

exports[`pagebreak-split > mdx > output1 1`] = `
"---
blockBreak: true
---

<div>
  A
</div>

<div>
  B
</div>"
`;

exports[`pagebreak-split > mdx > output2 1`] = `
"---
blockBreak: true
---

<div>
  A
</div>

<div>
  B
</div>"
`;

exports[`pagebreak-split > mdx > parsed 1`] = `
[
  {
    "type": "yaml",
    "value": "blockBreak: true",
  },
  {
    "attributes": [],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "A",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
  {
    "attributes": [],
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "B",
          },
        ],
        "type": "paragraph",
      },
    ],
    "name": "div",
    "type": "mdxJsxFlowElement",
  },
]
`;
